[package]
name = "blockchain"
version = "0.1.0"
authors = ["Daniel Olano <daniel@olanod.com>"]
edition = "2018"

[dependencies]
sube = { git = "https://github.com/valibre-org/sube.git", branch = "main" }
base58 = "0.1.0"
hex = "0.4.2"
path-tree = "0.1.12"
valor = { version = "0.4.7-beta.0", package = "valor_core", features = ["util"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
valor = { version = "0.4.7-beta.0", package = "valor_core", features = ["util", "web"] }

[lib]
crate-type = ["cdylib", "lib"]
