[package]
name = "blockchain"
version = "0.1.0"
authors = ["Daniel Olano <daniel@olanod.com>"]
edition = "2018"

[dependencies]
sube = { git = "https://github.com/valibre-org/sube.git", branch = "main" }
base58 = "0.1.0"
hex = "0.4.3"
path-tree = "0.1.12"
valor = { version = "0.5.2-beta.0", package = "valor_core", features = ["util", "serde"] }
serde_json = { version = "1.0.64", default-features = false, optional = true }

[features]
default = ["serde_json"]

[build-dependencies]
vlugin = { git = "https://github.com/valibre-org/valor.git", branch = "main", package = "valor_plugin_build" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
valor = { version = "0.5.2-beta.0", package = "valor_core", features = ["util", "web"] }

[lib]
crate-type = ["cdylib", "lib"]
