[package]
name = "capture_url"
version = "0.1.0"
authors = ["Jorge Villalobos <jorge.villalobos2809@gmail.com>"]
edition = "2018"

[dependencies]
base64 = "0.13.0"
thirtyfour = { version = "0.23.0", features = ["async-std-runtime"] }
url = "2.2.1"
valor = { git = "https://github.com/valibre-org/valor.git", branch = "main", package = "valor_core", features = ["util", "serde"] }

[dev-dependencies]
async-std = "1.9.0"
image = "0.23.14"

[build-dependencies]
vlugin = { git = "https://github.com/valibre-org/valor.git", branch = "main", package = "valor_plugin_build" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
valor = { git = "https://github.com/valibre-org/valor.git", branch = "main", package = "valor_core", features = ["util", "web"] }

[lib]
crate-type = ["cdylib", "lib"]
