[package]
name = "transfers"
version = "0.1.0"
authors = ["Daniel Olano <daniel@olanod.com>"]
edition = "2018"

[dependencies]
base64-url = "1.4.8"
serde = "1.0.124"
valor = { version = "0.4.7-beta.0", package = "valor_core", features = ["util"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
valor = { version = "0.4.7-beta.0", package = "valor_core", features = ["util", "web"] }

[lib]
crate-type = ["cdylib", "lib"]
