[package]
name = "transfers"
version = "0.1.0"
authors = ["Daniel Olano <daniel@olanod.com>"]
edition = "2018"

[dependencies]
base64-url = "1.4.9"
serde = "1.0.125"
valor = { git = "https://github.com/valibre-org/valor.git", branch = "main", package = "valor_core", features = ["util", "serde"] }

[build-dependencies]
vlugin = { git = "https://github.com/valibre-org/valor.git", branch = "main", package = "valor_plugin_build" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
valor = { git = "https://github.com/valibre-org/valor.git", branch = "main", package = "valor_core", features = ["util", "web"] }

[lib]
crate-type = ["cdylib", "lib"]
