[package]
name = "wallet"
version = "0.2.0"
authors = ["Daniel Olano <daniel@olanod.com>"]
edition = "2018"

[dependencies]
path-tree = "0.1.12"
valor = { version = "0.5.2-beta.0", package = "valor_core", features = ["util", "serde"] }
libwallet = { git = "https://github.com/valibre-org/libwallet.git" }
webauthn-rs = "0.2.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
valor = { version = "0.5.2-beta.0", package = "valor_core", features = ["util", "serde", "web"] }

[build-dependencies]
vlugin = { git = "https://github.com/valibre-org/valor.git", branch = "main", package = "valor_plugin_build" }

[dev-dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }

[lib]
crate-type = ["cdylib", "lib"]
